refactor: substituindo .collect(Collectors.toList()) diretamente por .toList()