@@ -4,7 +4,6 @@ import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -71,7 +70,7 @@ public class AcaoServiceImpl implements AcaoService {
             }
         }
 
-        return acoes.stream().filter( acao -> acao.getAceito().equals( aceito ) ).collect( Collectors.toList() );
+        return acoes.stream().filter( acao -> acao.getAceito().equals( aceito ) ).toList();
     }
 
     @Override
